--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 *.iml
 *.lst
 
+
 # Package Files #
 *.jar
 *.war
@@ -26,3 +27,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/maven-archiver/pom.properties
