--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 # Log file
 *.log
 
+
+# Serialized file
+*.ser
+
 # BlueJ files
 *.ctxt
 
@@ -28,4 +32,3 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/maven-archiver/pom.properties
